Bug 139480 - Enabling/disabling change tracking in Calc doesn't set modified status
Summary: Enabling/disabling change tracking in Calc doesn't set modified status
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Justin L
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks: ModifiedStatus Calc-Track-Changes
  Show dependency treegraph
 
Reported: 2021-01-07 18:04 UTC by Aron Budea
Modified: 2022-10-04 02:28 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2021-01-07 18:04:13 UTC
Start a new spreadsheet, or open an existing one, and toggle Edit -> Track Changes -> Record.

=> The spreadsheet doesn't become modified, if it's closed without explicitely saving it, the change in the setting is lost.

Observed in LO 7.2.0.0.alpha0+ (2c9708cbb870483a8a1c93d722085be5f789d234), 3.3.0 / Ubuntu.

In Writer this is working fine, already in 3.3.0.
Comment 1 Commit Notification 2022-10-04 02:27:28 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/55ee3ede2bb0211e895053ed3a54bb1c99cc94ca

tdf#139480 sc: Un/Track changes now marks spreadsheet as unsaved

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.