tdf#139480 sc: Un/Track changes now marks spreadsheet as unsaved

It makes it consistent with SW, which is why I went ahead
with this without asking any questions.

Change-Id: Ibb8f4149bfb3bd785c35772d0ff399f60c0d1c72
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140933
Tested-by: Justin Luth <jluth@mail.com>
Reviewed-by: Justin Luth <jluth@mail.com>